# table-postgres

./: .gitignore  Makefile.am  README.md  compat.h  configure.ac  dict.c  log.c  log.h  shell.nix  table-postgres.5  table_postgres.c  table_stdio.c  table_stdio.h  util.c  util.h
openbsd-compat/: Makefile.am  asprintf.c  err.h  getprogname.c  strlcat.c  strlcpy.c  strsep.c  strtonum.c
